--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -24,7 +24,7 @@ body{
 	border-bottom: 8px solid navy;
 	border-radius:15px;
 	padding-left: 40px;
-	padding-bottom:45px;
+	padding-bottom:35px;
 	margin-bottom:40px;
 }
 
@@ -34,14 +34,16 @@ body{
 	color:navy;
 	padding:10px;
 	padding-top:20px;
+	padding-bottom:20px;
 	margin: 20px;
 	border-top:2px solid grey;
 	border-right:2px solid black;
 	border-radius:20px;
-	width:20%;
+	width:21%;
 }
 
 .empty {
+	padding-top:10%;
 	width: 40%;
 }
 
@@ -58,7 +60,8 @@ body{
 }
 
 #rfooter {
-	margin-top:100px;
+	margin-top:25px;
+	margin-bottom:25px;
 }
 
 
