--- a/testing/noteside/textarea.css
+++ b/testing/noteside/textarea.css
@@ -1,6 +1,6 @@
 body {
 	font-family:'Ubuntu',sans-serif;
-	background-color: #FCF3E4;
+	background-color: #ffffff;
 }
 .sidebar-wrapper{
 	position:absolute;
@@ -15,7 +15,7 @@ body {
 .sidebar-window{
 	height:100%;
 	width:40vw;
-	background-color: #FFFFFF;
+	background-color: #F0F2F9;
 	float:left;
 	overyflow-y:scroll;
 	
@@ -31,7 +31,8 @@ body {
 	height:50px;
 	width:100px;
 	text-align:center;
-	background-color: #6DC4E8;
+	background-color: #6074C7;
+	color:#ffffff;
 	float:left;
 	line-height:50px;
 	user-select:none;
@@ -42,7 +43,7 @@ body {
 	border-top: 25px solid transparent;
 	border-bottom: 25px solid transparent;
 	float:left;
-	border-left: 20px solid #6DC4E8;
+	border-left: 20px solid #6074C7;
 }
 #counter-pointer{
 	margin-top:35vh;
@@ -78,7 +79,8 @@ body {
 	text-align:center;
 }
 .sidebar-head{
-	font-size:23px;
+	font-size:28px;
+	color:#031B4F;
 }
 #stat-div{
 	width:90%;
@@ -145,10 +147,10 @@ input{
 	margin-top:10px;
 	border:none;
 	font-family:'Ubuntu',sans-serif;
-	background-color: #e7e7e7;
+	background-color: #49AABC;
 }
 .btn:hover{
-	background-color: #cccccc;
+	background-color: #057F96;
 }
 #submit-button{
 	float:right;
@@ -202,7 +204,7 @@ li a, .dropbtn{
 	user-select: none;
 }
 li a:hover, .dropdown:hover .dropbtn{
-	background-color:#3D7786;
+	background-color:#06BEE1;
 }
 li.dropdown{
 	display:inline-block;
