--- a/testing/noteside/textarea.css
+++ b/testing/noteside/textarea.css
@@ -93,6 +93,25 @@ body {
 	border:1px solid black;
 	background-color:#fbfbfb;
 }
+#stat-div::-webkit-scrollbar { 
+	display: none; 
+}
+.stat-entry{
+	height:30px;
+	width:97%;
+	margin:0 auto;
+	margin-top:-5px;
+	padding:10px;
+}
+.stat-entry-word{
+	float:left;
+	font-size:20px;
+}
+.stat-entry-amt{
+	float:right;
+	font-size: 20px;
+	font-family: 'Ubuntu Mono', sans-serif;
+}
 #stat {
 	font-family: 'Ubuntu Mono', sans-serif;
 	font-size:15px;
