--- a/testing/noteside/Note/note.css
+++ b/testing/noteside/Note/note.css
@@ -1,3 +1,6 @@
+body{
+	background-color: #00607D;
+}
 .navbar-div{
 	background-color:#2183B1;
 	width:100vw;
@@ -5,6 +8,9 @@
 	height:40px;
 	margin-top:-15px;
 	padding:10px;
+	padding-bottom:5px;
+	position:fixed;
+	z-index:10;
 }
 .navbar{
 	list-style-type: none;
@@ -27,9 +33,9 @@ li{
 	color:#E3F7FF;
 	text-align:center;
 	padding:10px 20px;
-	margin-right:10px;
+	margin-right:20px;
 	margin-top:-5px;
-	font-family:sans-serif;
+	font-family:'Ubuntu',sans-serif;
 	font-size:22px;
 	text-decoration: none;
 	background-color: #2183B1;
@@ -39,4 +45,111 @@ li{
 }
 #nav-header{
 	font-size:40px;
+}
+.container{
+	height:100vh;
+	width:75vw;
+	position:fixed;
+	right:0;
+	left:0;
+	margin-left: auto;
+	margin-right:auto;
+	display:block;
+}
+.sidebar{
+	height:100%;
+	width:10vw;
+	float:left;
+	margin-left:-5px;
+	/*border-right:2px solid #77F6C8;*/
+}
+.toolbar-div{
+	padding-top:30vh;
+}
+.toolbar{
+	list-style-type: none;
+	margin:0;
+	padding:0;
+}
+.toolbar li{
+	height:30px;
+	line-height:30px;
+	margin-bottom:20px;
+}
+.toolbar li a{
+	display:block;
+	color:#CBEAF8;
+	text-align:center;
+	padding:20px 20px;
+	margin-right:20px;
+	margin-bottom:40px;
+	margin:10px;
+	font-family:'Ubuntu',sans-serif;
+	font-size:22px;
+	text-decoration: none;
+}
+.note-container{
+	height:100%;
+	width:65vw;
+	float:right;
+	margin-right:-5px;
+	overflow-y:scroll;
+}
+.note-container::-webkit-scrollbar{
+	display:none;
+}
+.note-title-div{
+	width:100%;
+	height:100px;
+	margin:0 auto;
+	margin-top:40px;
+	text-align:center;
+	overflow-x:scroll;
+	background-color:#89D6E2;
+}
+.note-title-div::-webkit-scrollbar{
+	display:none;
+}
+.note-title{
+	font-size:45px;
+	line-height:100px;
+	font-family:'Ubuntu',sans-serif;
+}
+.note-info-div{
+	width:100%;
+	height:75px;
+	margin:0 auto;
+	margin-top:-10px;
+	border-bottom:1px solid #29557A;
+	padding:0;
+	background-color:#89D6E2;
+}
+.note-info-row{
+	margin:0;
+	padding:10px;
+	display:block;
+	width:31%;
+	height:37px;
+	float:left;
+	text-align:center;
+	font-family: 'Ubuntu', sans-serif;
+	font-size:20px;
+	line-height:37px;
+}
+.note-info-row a{
+	text-decoration:none;
+	color:#217F97;
+}
+.note-content{
+	margin:0 auto;
+	padding:25px;
+	padding-right:40px;
+	display:block;
+	max-width: 100%;
+	margin-top:5px;
+	border:1px solid black;
+	font-size:20px;
+	background-color:#CCD9DE;
+	font-family:'Eczar',serif;
+	line-height: 1.5em;
 }
