--- a/testing/noteside/Create/textarea.css
+++ b/testing/noteside/Create/textarea.css
@@ -237,12 +237,12 @@ input{
 	margin-top:10px;
 	margin-left:20px;
 }
-ul {
+#format-bar-div ul {
 	list-style-type:none;
 	padding:0;
 	margin:0;
 }
-li{
+#format-bar-div ul div li, #format-bar-div ul li, #format-bar-div ul div li div li{
 	float:left;
 	border:1px solid black;
 	display:inline-block;
