--- a/projects/workday/style.css
+++ b/projects/workday/style.css
@@ -1,5 +1,6 @@
 body{
 	background: #EBEBEB;
+	overflow:hidden;
 }
 
 .progress-bar{
@@ -18,7 +19,7 @@ body{
 	margin:0;
 	height:100%;
 	background:#4FE17C;
-	transition: width ease-in-out;
+	transition: width .2s ease-in-out;
 }
 
 @keyframes flash{
@@ -176,224 +177,84 @@ body{
 	transform:translateX(-50%);
 }
 
-.one .top{
-	display:none;
-}
-.one .top-left{
-	display:none;
-}
-.one.top-right{
-	display:block;
-}
-.one .middle{
-	display:none;
-}
-.one .bottom-left{
-	display:none;
-}
-.one .bottom-right{
-	display:block;
-}
-.one .bottom{
-	display:none;
+.tab{
+	position:absolute;
+	top:0;
+	right:0;
+	height:50px;
+	width:50px;
+	line-height: 50px;
+	text-align:center;
+	font-size:35px;
+	font-weight:bold;
+	font-family:sans-serif;
+	color:#fff;
+	cursor:pointer;
+	background:#336699;
+	transition:transform .2s ease-in-out;
 }
 
-.two .top{
-	display:block;
-}
-.two .top-left{
-	display:none;
-}
-.two .top-right{
-	display:block;
-}
-.two .middle{
-	display:block;
-}
-.two .bottom-right{
-	display:none;
-}
-.two .bottom-left{
-	display:block;
-}
-.two .bottom{
-	display:block;
+.settings{
+	position:absolute;
+	top:0;
+	right:0;
+	height:75px;
+	width:700px;
+	transform:translateX(700px);
+	background:#336699;
+	transition:transform .2s ease-in-out;
 }
 
-.three .top{
-	display:block;
-}
-.three .top-left{
-	display:none;
-}
-.three .top-right{
-	display:block;
-}
-.three .middle{
-	display:block;
-}
-.three .bottom-left{
-	display:none;
-}
-.three .bottom-right{
-	display:block;
-}
-.three .bottom{
-	display:block;
+.visible{
+	transform: translateX(0px);
 }
 
-.four .top {
-	display:none;
-}
-.four .top-left{
-	display:block;
-}
-.four .top-right{
-	display:block;
-}
-.four .middle{
-	display:block;
-}
-.four .bottom-left{
-	display:none;
-}
-.four .bottom-right{
-	display:block;
-}
-.four .bottom{
-	display:none;
+.tab-on{
+	transform: translateX(-700px);
 }
 
-.five .top{
-	display:block;
-}
-.five .top-left{
-	display:block;
-}
-.five .top-right{
-	display:none;
-}
-.five .middle{
-	display:block;
-}
-.five .bottom-left{
-	display:none;
-}
-.five .bottom-right{
-	display:block;
-}
-.five .bottom{
-	display:block;
+#seconds-input{
+	background:#336699;
+	height:50px;
+	width:200px;
+	float:left;
+	margin:10px;
+	margin-left:50px;
+	padding-left:10px;
+	font-size:24px;
+	font-family:'Roboto',sans-serif;
+	color:#fff;
+	border:0;
+	outline:none;
+	border:2px solid #8cb3d9;
+	text-align:center;
 }
 
-.six .top{
-	display:block;
-}
-.six .top-left{
-	display:block;
-}
-.six .top-right{
-	display:none;
-}
-.six .middle{
-	display:block;
-}
-.six .bottom-left{
-	display:block;
-}
-.six .bottom-right{
-	display:block;
-}
-.six .bottom{
-	display:block;
+.button{
+	height:50px;
+	width:100px;
+	float:left;
+	margin:10px;
+	margin-left:20px;
+	font-size:24px;
+	font-family:'Roboto',sans-serif;
+	color:#fff;
+	text-align:center;
+	line-height:50px;
+	border:2px solid #8cb3d9;
+	cursor:pointer;
 }
 
-.seven .top{
-	display:block;
-}
-.seven .top-left{
-	display:none;
-}
-.seven .top-right{
-	display:block;
-}
-.seven .middle{
-	display:none;
-}
-.seven .bottom-left{
-	display:none;
-}
-.seven .bottom-right{
-	display:block;
-}
-.seven .bottom{
-	display:none;
+.submit{
+	background:#339966;
 }
 
-.eight .top{
-	display:block;
-}
-.eight .top-left{
-	display:block;
-}
-.eight .top-right{
-	display:block;
-}
-.eight .middle{
-	display:block;
-}
-.eight .bottom-left{
-	display:block;
-}
-.eight .bottom-right{
-	display:block;
-}
-.eight .bottom{
-	display:block;
+.set-work{
+	background:#5353c6;
 }
 
-.nine .top{
-	display:block;
-}
-.nine .top-left{
-	display:block;
-}
-.nine .top-right{
-	display:block;
-}
-.nine .middle{
-	display:block;
-}
-.nine .bottom-left{
-	display:none;
-}
-.nine .bottom-right{
-	display:block;
-}
-.nine .bottom{
-	display:block;
-}
-
-.zero .top{
-	display:block;
-}
-.zero .top-left{
-	display:block;
-}
-.zero .top-right{
-	display:block;
-}
-.zero .middle{
-	display:none;
-}
-.zero .bottom-left{
-	display:block;
-}
-.zero .bottom-right{
-	display:block;
-}
-.zero .bottom{
-	display:block;
+.set-school{
+	background:#00ace6;
 }
 
 
