--- a/projects/startpage/css/index.css
+++ b/projects/startpage/css/index.css
@@ -279,7 +279,7 @@ div.title-bar {
 	top:0;
 	left:0;
 
-	background:#764CFD;
+	background:#1A85D0;
 	opacity:0.9;
 
 	height:15px;
@@ -344,6 +344,67 @@ div.window-content {
 
 }
 
+div.links-list-container {
+
+	position:absolute;
+
+	width:20vw;
+
+	top:50%;
+	transform:translateY(-50%);
+
+	margin:0;
+	padding:0;
+
+}
+
+div.link-col-1 {
+	
+	left:0;
+
+}
+
+div.link-col-2 {
+
+	right:0;
+
+}
+
+div.links-list-container ul {
+
+	list-style-type: none;
+	margin:0;
+	padding:0;
+
+}
+
+div.links-list-container ul li {
+
+	display:block;
+
+	height:36px;
+	line-height: 36px;
+
+	text-align:center;
+
+}
+
+div.links-list-container ul li a {
+
+	text-decoration:none;
+
+	font-size:22px;
+	font-family:LucidaSansTypewriter;
+	color:#fff;
+
+}
+
+div.links-list-container ul li:hover a{
+
+	text-decoration:underline;
+	
+}
+
 #time {
 
 	height:15vh;
@@ -366,7 +427,7 @@ div.time-stamp {
 	position:absolute;
 	left:0;
 	top:50%;
-	transform:translateY(-45%);
+	transform:translateY(-40%);
 
 	height:15vh;
 	width:13vw;
@@ -388,7 +449,7 @@ div.date-stamp {
 	position:absolute;
 	right:0;
 	top:50%;
-	transform:translateY(-45%);
+	transform:translateY(-40%);
 
 	height:9vh;
 	width:13vw;
@@ -412,7 +473,7 @@ div.date-sect {
 	font-family: RobotoLight;
 	font-size:12px;
 
-	color:#D2D1D1;
+	color:#fff;
 
 	margin:0;
 	padding:0;
@@ -473,24 +534,11 @@ div.temp-sum {
 
 	height:50px;
 	line-height:50px;
-	width:5vw;
+	width:9vw;
 	text-align:left;
 
 	color:#fff;
 	font-size:46px;
-
-	margin:0;
-	padding:0;
-
-}
-
-div.temp-high-low {
-
-	position:relative;
-	float:left;
-
-	height:50px;
-	width:4vw;
 
 	margin:0;
 	padding:0;
@@ -563,7 +611,7 @@ div.air-sum-comp span {
 div.weather-description {
 
 	position:absolute;
-	top:30%;
+	top:27%;
 
 	height:12px;
 	line-height: 12px;
@@ -578,10 +626,28 @@ div.weather-description {
 
 }
 
+div.forecast-description {
+
+	position:absolute;
+	top:32%;
+
+	height:12px;
+	line-height: 12px;
+	width:27vw;
+	text-align: center;
+
+	color:#fff;
+	font-size:12px;
+
+	margin:0;
+	padding:0;
+
+}
+
 div.forecast {
 
 	position:absolute;
-	bottom:5%;
+	bottom:2%;
 	left:50%;
 	transform:translateX(-50%);
 	
