--- a/projects/tetris/tetris.css
+++ b/projects/tetris/tetris.css
@@ -1,7 +1,27 @@
+body {
+	background: #606060;
+}
+
 #canvas{
 	position:absolute;
 	top:50%;
 	left:50%;
 	transform:translate(-50%,-50%);
 	border:1px solid #333;
+	-webkit-box-shadow: 0px 10px 28px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 10px 28px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 10px 28px 0px rgba(0,0,0,0.75);
+}
+
+div#score-container {
+	position:absolute;
+	top:50%;
+	left:20%;
+	height:30px;
+	line-height:30px;
+	margin:0;
+	padding:0;
+	font-size:30px;
+	color:#fff;
+	font-family: 'Lalezar', sans-serif;
 }
