--- a/projects/tetris/tetris.css
+++ b/projects/tetris/tetris.css
@@ -19,9 +19,52 @@ div#score-container {
 	left:20%;
 	height:30px;
 	line-height:30px;
+	text-align:center;
 	margin:0;
 	padding:0;
 	font-size:30px;
 	color:#fff;
 	font-family: 'Lalezar', sans-serif;
+}
+
+div#next-piece-label {
+	position:absolute;
+	top: 35%;
+	right:20%;
+	height:30px;
+	line-height:30px;
+	text-align:center;
+	margin:0;
+	padding:0;
+	font-size:30px;
+	color:#fff;
+	font-family: 'Lalezar', sans-serif;
+}
+
+div#next-piece-outer {
+	position:absolute;
+	top:50%;
+	right:20%;
+	transform:translateY(-50%);
+	margin:0;
+	padding:0;
+	background:#404040;
+	border:1px solid #333;
+	-webkit-box-shadow: 0px 5px 12px 0px rgba(0,0,0,0.6);
+	-moz-box-shadow: 0px 5px 12px 0px rgba(0,0,0,0.6);
+	box-shadow: 0px 5px 12px 0px rgba(0,0,0,0.6);
+}
+
+div#next-piece-inner {
+	position:relative;
+	margin:0;
+	padding:0;
+}
+
+canvas#next-piece {
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+	margin:0;
 }
